adl-frontend/src/test/resources/unit/error/semantic/params/Param1.adl
//#SemanticError GroupId=ADL ErrorId=ADL_NOT_FOUND line=4

primitive params.Param1 extends 
foo.UnknownADL
(1, 2)
{

}